add package.json file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/app.ts",
     "start": "ts-node ./src/app.ts",
-    "build":"npm i tsc ts-node -g"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
